hphp/hack/test/typecheck/reactive/byval_collection_as_property4.php
<?hh // strict
abstract class A {
  protected darray<string, varray<int>> $events = darray[];

  <<__RxShallow>>
  public static function eventMutable(<<__Mutable>>A $a): void {
    $a->events['$event'][0] = 1;
  }
}
